Fix S in hero logo to be path, fix menu links on small screens to be black

--- a/_compass/_header.scss
+++ b/_compass/_header.scss
@@ -52,7 +52,11 @@
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
+        color: black;
 
+        .page-link {
+          color: $black;
+        }
         .menu-icon {
             display: block;
             float: right;
