--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -9,6 +9,7 @@
 // Colors
 //
 $white: rgb(255,255,255);
+$black: rgb(0,0,0);
 $blue: rgb(44,170,226);
 $yellow: rgb(252,238,31);
 $green: rgb(141,198,63);
